# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

source_set("args") {
  public_configs = [
    rebase_path("services/build/config", ".", mojo_services_root) + ":services"
  ]

  sources = [
    "lib/args.cc",
    "args.h",
  ]
}
