# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

source_set("network") {
  deps = [
    "//base",
    "//mojo/application",
    "//mojo/common",
    "//mojo/environment:chromium",
    rebase_path("mojo/public/c/system:for_component", ".", mojo_root),
    rebase_path("services/public/interfaces/network", ".", mojo_services_root),
  ]

  public_configs = [
    rebase_path("services/build/config", ".", mojo_services_root) + ":services"
  ]

  sources = [
    "udp_socket_wrapper.cc",
    "udp_socket_wrapper.h",
    "web_socket_read_queue.cc",
    "web_socket_read_queue.h",
    "web_socket_write_queue.cc",
    "web_socket_write_queue.h",
  ]
}
