# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

source_set("surfaces") {
  public_configs = [
    rebase_path("services/build/config", ".", mojo_services_root) + ":services"
  ]

  sources = [
    "surfaces_utils.cc",
    "surfaces_utils.h",
  ]

  deps = [
    rebase_path("services/public/interfaces/geometry", ".", mojo_services_root),
    rebase_path("services/public/interfaces/surfaces", ".", mojo_services_root),
  ]
}
