# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

mojom("input_events") {
  public_configs = [
    rebase_path("services/build/config", ".", mojo_services_root) + ":services"
  ]

  sources = [
    "input_events.mojom",
    "input_event_constants.mojom",
    "input_key_codes.mojom",
  ]

  deps = [
    rebase_path("services/public/interfaces/geometry", ".", mojo_services_root),
  ]
}
