# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

mojom("native_viewport") {
  public_configs = [
    rebase_path("services/build/config", ".", mojo_services_root) + ":services"
  ]

  sources = [
    "native_viewport.mojom",
  ]

  public_deps = [
    rebase_path("services/public/interfaces/geometry", ".", mojo_services_root),
    rebase_path("services/public/interfaces/gpu", ".", mojo_services_root),
    rebase_path("services/public/interfaces/input_events", ".", mojo_services_root),
    rebase_path("services/public/interfaces/surfaces:surface_id", ".", mojo_services_root),
  ]
}
