# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

mojom("navigation") {
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  public_configs += [ rebase_path("services/build/config", ".", mojo_services_root) + ":services" ]
  sources = [
    "navigation.mojom",
  ]

  deps = [
    rebase_path("services/public/interfaces/network", ".", mojo_services_root),
  ]
}
