# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

# GYP version: mojo/mojo_services.gypi:mojo_surfaces_bindings
mojom("surfaces") {
  sources = [
    "quads.mojom",
    "surfaces.mojom",
    "surfaces_service.mojom",
  ]

  deps = [
    ":surface_id",
    rebase_path("services/public/interfaces/geometry", ".", mojo_services_root),
    rebase_path("services/public/interfaces/gpu", ".", mojo_services_root),
    rebase_path("services/public/interfaces/native_viewport", ".", mojo_services_root),
  ]
}


mojom("surface_id") {
  sources = [
    "surface_id.mojom",
  ]
}
