# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

import("//build/config/ui.gni")

test("mojo_view_manager_lib_unittests") {
  public_configs = [
    rebase_path("services/build/config", ".", mojo_services_root) + ":services"
  ]

  sources = [
    "view_unittest.cc",
    "view_manager_unittest.cc",
  ]

  deps = [
    "//base",
    "//base/test:test_support",
    rebase_path("testing/gtest", ".", mojo_third_party_root),
    "//ui/gfx",
    "//ui/gfx:test_support",
    "//mojo/application_manager",
    "//mojo/converters/geometry",
    "//mojo/environment:chromium",
    rebase_path("services/public/cpp/geometry", ".", mojo_services_root),
    rebase_path("services/public/interfaces/geometry", ".", mojo_services_root),
    "//mojo/shell:test_support",
    rebase_path("services/public/interfaces/view_manager", ".", mojo_services_root),
    rebase_path("services/public/cpp/view_manager", ".", mojo_services_root),
  ]
  if (use_aura) {
    deps += [ rebase_path("services/public/cpp/view_manager/lib:run_unittests", ".", mojo_services_root) ]
  } else {
    deps += [ "//mojo/edk/test:run_all_unittests" ]
  }
}
